--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
 android {
     compileSdk 33
 
+    viewBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.example.keyword"
         minSdk 23
