--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ArticleActivity"
+            android:usesCleartextTraffic="true"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
@@ -29,8 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:usesCleartextTraffic="true" />
+            android:exported="false"/>
     </application>
 
 </manifest>
