--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     compileSdk 33
-
     viewBinding {
         enabled = true
     }
@@ -17,6 +16,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -33,9 +33,7 @@ android {
         jvmTarget = '1.8'
     }
 }
-
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -67,4 +65,6 @@ dependencies {
     //Material Menu
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
 
+    //RefreshLayout
+    implementation 'in.srain.cube:ultra-ptr:1.0.11'
 }
